bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value fin
fin=false;
^BDR:3: error: not found: value fin
while (!fin) {
        ^BDR:42: error: not found: value fin
    fin=true
    ^